--- a/config.toml
+++ b/config.toml
@@ -14,10 +14,10 @@ disqusShortname = ""
     url = "/about/"
 [[menu.main]]
     name = "GitHub"
-    url = ""
+    url = "https://github.com/howardplus"
 [[menu.main]]
     name = "Twitter"
-    url = ""
+    url = "https://twitter.com/hctw6"
 
 [params]
     description = ""
